fix: 서버쪽 설정 .sh 수정

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
 server_name=server1
+#Git Repository name
+prj_name=level2-bookratingprediction-recsys-06
 username=유대선_T7537
 email=xenx96@naver.com
-data_log_path=/data/ephemeral/home/log
+data_log_path=/data/ephemeral/home/saved/log
 #해당
-data_path=./data/processed/V5-2024-10-16-YDS-APT-RANK-RecentD.csv
+data_path=./data/
