--- a/config-sample.yaml
+++ b/config-sample.yaml
@@ -27,8 +27,8 @@ dataloader:
 optimizer:
   type: Adam      # 사용가능한 optimizer: torch.optim.Optimizer 클래스 (https://pytorch.org/docs/stable/optim.html#algorithms)
   args: # 사용하고자 하는 클래스의 파라미터를 참고하여 추가해주시면 되며, 관계가 없는 파라미터는 무시됩니다.
-    lr: 5e-3            # 예) 모든 옵티마이저에서 사용되는 학습률
-    weight_decay: 1e-4  # 예) Adam 등 / L2 정규화 가중치
+    lr: 1e-4            # 예) 모든 옵티마이저에서 사용되는 학습률
+    weight_decay: 5e-3  # 예) Adam 등 / L2 정규화 가중치
     amsgrad: False      # 예) Adam 등 / amsgrad 사용 여부
 
 loss: RMSELoss          # 직접 정의한 loss 클래스 또는 torch.nn.Module 클래스 (https://pytorch.org/docs/stable/nn.html#loss-functions)
@@ -38,14 +38,16 @@ lr_scheduler:
   type: ReduceLROnPlateau     # 사용가능한 lr_scheduler: torch.optim.lr_scheduler 클래스 (https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate)
   args: # 사용하고자 하는 클래스의 파라미터를 참고하여 추가해주시면 되며, 관계가 없는 파라미터는 무시됩니다.
     mode: 'min'             # 예) ReduceLROnPlateau / 'min' 또는 'max'
-    factor: 0.1             # 예) ReduceLROnPlateau / 학습률 감소 비율
-    step_size: 10           # 예) StepLR / 학습률 감소 주기 (필수)
+    factor: 0.5             # 예) ReduceLROnPlateau / 학습률 감소 비율
+    step_size: 5           # 예) StepLR / 학습률 감소 주기 (필수)
     gamma: 0.1              # 예) StepLR 등 / 학습률 감소 비율
+    patience: 3             # 예) ReduceLROnPlateau / 학습률 감소 대기 기간
+    min_lr: 1e-6            # 예) ReduceLROnPlateau / 최소 학습률
 
 metrics: [ MSELoss, MAELoss, RMSELoss ]  # 평가 지표. 직접 정의한 loss 클래스 또는 torch.nn.Module 클래스 (https://pytorch.org/docs/stable/nn.html#loss-functions)
 
 train:
-  epochs: 20                          # 학습 에폭 수
+  epochs: 25                          # 학습 에폭 수
   log_dir: saved/log                  # 로그 저장 경로
   ckpt_dir: saved/checkpoint    # 모델 저장 경로
   submit_dir: saved/submit            # 예측 저장 경로
